--- a/UBankRobbery/UBankRobbery.csproj
+++ b/UBankRobbery/UBankRobbery.csproj
@@ -65,6 +65,9 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Uconomy">
+      <HintPath>..\libraries\Uconomy.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine">
       <HintPath>..\libraries\UnityEngine.dll</HintPath>
     </Reference>
@@ -80,6 +83,7 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="Functionality\RobManager.cs" />
     <Compile Include="Functionality\RunningRobbery.cs" />
+    <Compile Include="Helpers\UconomyHelper.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regions\AdvancedRegions\AdvancedRegionsManager.cs" />
@@ -87,5 +91,6 @@
     <Compile Include="Regions\IRegionManager.cs" />
     <Compile Include="Regions\RocketRegions\AdvancedZonesManager.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
