--- a/UPets/UPets.csproj
+++ b/UPets/UPets.csproj
@@ -105,9 +105,14 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="Handlers\DataHandler.cs" />
     <Compile Include="Handlers\PetHandler.cs" />
+    <Compile Include="Models\PetAsset.cs" />
+    <Compile Include="Models\PlayerData.cs" />
+    <Compile Include="Patches\AnimalManagerPatches.cs" />
+    <Compile Include="Patches\AnimalPatches.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions\ReflectionUtil.cs" />
+    <Compile Include="Providers\IPetDatabaseProvider.cs" />
     <Compile Include="StorageItems\PlayerItem.cs" />
     <Compile Include="Transelations\ColorExtras.cs" />
     <Compile Include="Transelations\Transelation.cs" />
