--- a/UPets/packages.config
+++ b/UPets/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net461" />
+  <package id="Dapper" version="2.0.78" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net461" />
   <package id="Lib.Harmony" version="2.0.4" targetFramework="net461" />
   <package id="MySql.Data" version="8.0.17" targetFramework="net461" />
